force-app/main/default/objects/aig_AI_Use_Case_AI_Feature__c/aig_AI_Use_Case_AI_Feature__c.object-meta.xml
<CustomObject>
    <label>AI Use Case AI Feature</label>
    <nameField>
        <displayFormat>AI-{0000000}</displayFormat>
        <label>AI Feature</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Case AI Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>