force-app/main/default/objects/aig_AI_Use_Case_AI_Feature__c/fields/aig_AI_Feature__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Feature__c</fullName>
    <label>AI Feature</label>
    <referenceTo>aig_AI_Features__c</referenceTo>
    <relationshipLabel>Use Cases</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_AI_Features</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>