force-app/main/default/objects/aig_AI_Use_Case_AI_Feature__c/fields/aig_Optional__c.field-meta.xml
<CustomField>
    <fullName>aig_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>